Squashed commit of the following:
commit e061aebcf9f15e93aaba2b374caa99bab8cb7cbd
Merge: a731385 a3634b3
Author: Kam Kasravi <kamkasravi@yahoo.com>
Date:   Tue Aug 19 13:51:32 2014 -0700

    Merge branch 'master' of https://github.com/intel-hadoop/gearpump into kam

    Conflicts:
    	src/main/scala/org/apache/gears/cluster/Starter.scala
    	src/main/scala/org/apache/gears/cluster/Worker.scala

commit a731385e61f89000dbefaaed6b4b2895a709a90d
Author: Kam Kasravi <kamkasravi@yahoo.com>
Date:   Tue Aug 19 13:21:30 2014 -0700

    Converting to use pack plugin which creates scripts (bash, bat) and does tar.gz packing

commit a3634b36857c3f3e03a0688ef2077384f5de67c0
Author: Sean Zhong <clockfly@gmail.com>
Date:   Tue Aug 19 19:18:32 2014 +0800

    1. use context.dispatcher instead of global execution context.
    2. config update for better performance.

commit 0d762094e57af234612e953ce417df6e54bcbdf4
Author: Sean Zhong <clockfly@gmail.com>
Date:   Tue Aug 19 14:30:25 2014 +0800

    sync with github.com/clockfly/gearpump