@@ -16,25 +16,15 @@
  * limitations under the License.
  */
 
-package org.apache.gears.cluster
+package org.apache.gearpump.transport.netty
 
-import java.io.File
+class NettyConfig(conf: Map[String, Any]) {
 
-trait ExecutorContext extends Serializable {
-  def getClassPath() : Array[String]
+  val buffer_size = 5242880
+  val max_retries = 30
+  val base_sleep_ms = 100
+  val max_sleep_ms = 1000
+  val messageBatchSize = 262144
+  val flushCheckInterval = 10
 
-  def getJvmArguments() : Array[String]
-}
-
-class DefaultExecutorContext extends ExecutorContext {
-  def getClassPath() : Array[String] = {
-    val classpath = System.getProperty("java.class.path");
-    val classpathList = classpath.split(File.pathSeparator);
-    classpathList
-  }
-
-  def getJvmArguments() : Array[String] = {
-    val arguments = "-server -Xms1024M -Xmx4096M -Xss1M -XX:MaxPermSize=128m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=80 -XX:+UseParNewGC -XX:NewRatio=3 -XX:NewSize=512m"
-    arguments.split(" ")
-  }
 }
